--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: hmoats.github.io
 description: Collection of projects, labs, notes, tips, docs, etc.
 show_downloads: false
-theme: jekyll-theme-modernisttitle: hmoats.github.io
+theme: jekyll-theme-modernisttitle
 google_analytics: [UA-150074282-1]
