--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: hmoats.github.io
 remote_theme: pages-themes/slate@v0.2.0
-#description: Collection of technology labs, notes, tips, docs, etc.
+description: Collection of technology labs, notes, tips, docs, etc.
 show_downloads: false
 theme: jekyll-theme-modernist
